# TorsionProfiler

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  environment_minimal.yml  environment_qm.yml  pyproject.toml
.github/workflows/: build-package.yml
examples/: example_torsionProfile_allTors_script.sh  example_torsionProfile_script.sh  example_torsion_profiler.ipynb
examples/data/: test_mol.sdf  test_mols.sdf
src/torsion_profiler/: __init__.py  _version.py  conf.json
src/torsion_profiler/data/: __init__.py
src/torsion_profiler/engines/: __init__.py  _abstractcalculator.py  alt_ani_calculator.py  gaussian_calculator.py  mmff94_calculator.py  off_calculator.py  openmm_ml_calculator.py  psi4_calculator.py  xtb_calculator.py
src/torsion_profiler/tests/: __init__.py  conftest.py  test_calculator.py  test_mol_db_utils.py  test_tp_1d_alltors_all_tps.sdf
src/torsion_profiler/tools/: __init__.py
src/torsion_profiler/utils/: __init__.py  baseclass.py  bash.py  metrics.py  mol_db_operation.py  molecule_attribs.py  units.py  utils.py
src/torsion_profiler/visualize/: __init__.py  visualize_torsion_profiles.py  visualize_tp_3d.py  widgets.py
src/torsion_profiler_cli/: README.MD  __init__.py  cli.py  plugins.py
src/torsion_profiler_cli/commands/: __init__.py  optimizer_ani.py  optimizer_off.py  optimizer_xtb.py  torsion_ani.py  torsion_gaus.py  torsion_mace.py  torsion_mmff94.py  torsion_off.py  torsion_psi4.py  torsion_xtb.py
src/torsion_profiler_cli/parameters/: __init__.py  mol.py  mol_dir.py  orchestration.py  output.py  output_dir.py  torsion_params.py
src/torsion_profiler_streamlit/: start_streamlit_server.sh  streamlit_starter.py  streamlit_torsionprofiler.py
(+95 files in other folders)
