[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "TorsionProfiler"
dynamic = ["version"]
authors=[
    {name="Benjamin Ries", email="benjamin.ries@boehringer-ingelheim.com"},
    {name="Igor Gordiy"},
    {name="Thomas Fox", email="thomas.fox@boehringer-ingelheim.com"},
]
dependencies = [
  'rdkit',
  'scipy',
  'numpy',
  'pandas',
  'matplotlib',
  'click',
  'plugcli',
  "streamlit",
  "py3dmol",
  "plotly",
]


description="TorsionProfiler is a package  giving rapid access to Torsion Profile calculations in Python"
readme="README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest"
]
streamlit = [
  "streamlit",
  "py3dmol",
  "plotly"
]

[project.urls]


[project.scripts]
cli-torsionprofiler = "torsion_profiler_cli.cli:main"
stream-torsionprofiler = "torsion_profiler_streamlit.streamlit_starter:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torsion_profiler = ["conf.json", "data/**/*.sdf", "data/**/*.csv", "data/**/*.model",]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"


[tool.versioningit.write]
file = "src/torsion_profiler/_version.py"

